Changed formatting to be proper

--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,9 @@
     </header>
     <main class="borderandbackground">
         <h3>Contact me here:</h3>
-        <p><ul>
-            
-            <li><i class="fa-solid fa-envelope"></i> Email (recommended): <a href="mailto:ssettino.ptech@gmail.com">ssettino.ptech@gmail.com</a></li>
-            <li><i class="fa-brands fa-github"></i> Github: <a href="https://github.com/SSettino">SSettino</a></li>
+        <ul>  
+            <li><p><i class="fa-solid fa-envelope"></i> Email (recommended): <a href="mailto:ssettino.ptech@gmail.com">ssettino.ptech@gmail.com</a></p></li>
+            <li><p><i class="fa-brands fa-github"></i> Github: <a href="https://github.com/SSettino">SSettino</a></p></li>
         </ul>
-        </p>
     </main>
 </body>
